@@ -1,6 +1,14 @@
 PGPLOT module Changes list
 --------------------------
 
+CHANGES v2.16, released Mar 10th, 2000
+--------------------------------------
+
+* Added function struct to allow access to expose certain PGPLOT
+  routines to the outside (currently cpgmove, cpgdraw)
+
+
+
 CHANGES 2.15 released Oct 26th 1999
 -----------------------------------
 
